samples/_failures_safe/1761516366_0b4e38_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_587f9730.c: In function ‘pointcloud_cleanup’:
./samples/SAFE/__tmp_587f9730.c:119:18: error: expected ‘;’ at end of input
  119 |         pc->count
      |                  ^
      |                  ;
./samples/SAFE/__tmp_587f9730.c:119:9: error: expected declaration or statement at end of input
  119 |         pc->count
      |         ^~
./samples/SAFE/__tmp_587f9730.c:119:9: error: expected declaration or statement at end of input
